--- a/css/chitietsanpham.css
+++ b/css/chitietsanpham.css
@@ -6,7 +6,7 @@ p{
 	font-size: 23px;
 	font-weight: bold;
 }
-.button_chitietsanpham{
+/*.button_chitietsanpham{
 	
 	height: 50px;
 	width: 300px;
@@ -16,4 +16,4 @@ p{
 	font-size: 1.5em;
 	margin-top: 100px;
 	color: white;
-}
+}*/
